@@ -10,6 +10,8 @@
 #                         University of Stuttgart.  All rights reserved.
 # Copyright (c) 2004-2005 The Regents of the University of California.
 #                         All rights reserved.
+# Copyright (c) 2007      Los Alamos National Security, LLC.  All rights
+#                         reserved.
 # $COPYRIGHT$
 # 
 # Additional copyrights may follow
@@ -41,7 +43,6 @@ libdatatype_reliable_la_CFLAGS = -DCHECKSUM $(AM_CFLAGS)
 libdatatype_la_SOURCES = \
 	dt_add.c \
 	dt_create.c \
-	dt_create_array.c \
 	dt_create_dup.c \
 	dt_create_indexed.c \
 	dt_create_struct.c \
