@@ -27,6 +27,7 @@ version 1.0.
 1.1.5
 -----
 
+- Implement MPI_TYPE_CREATE_DARRAY function.
 - Fix race condition in shared memory BTL startup that could cause MPI
   applications to hang in MPI_INIT.
 - Fix syntax error in a corner case of the event library.  Thanks to
